# airflow-infrastructure

./: .gitignore  DESIGN.md  README.md  docker-compose.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.yml
.junie/: guidelines.md
config/: airflow.cfg
dag_tests/: README.md  conftest.py  test_gdelt_url_injestion_dag.py  test_url_injestion.py  test_web_scraping.py
dags/: create_embedding_dag.py  database_migration_dag.py  example_called_dag.py  example_dag.py  gdelt_url_injestion_dag.py  injest_test_urls.py  variables.json  web_scraping_dag.py
dags/functions/: __init__.py  database_functions.py  embedding_functions.py  gdelt_functions.py
dags/gpt_prompts/: analysis_prompt.py
models/: base.py  model.py
models/alembic/: alembic.ini  env.py
notebooks/: article_extraction_prompt.ipynb
